@@ -714,6 +714,9 @@ Release 2.1.0-beta - 2013-07-02
     YARN-873. YARNClient.getApplicationReport(unknownAppId) returns a null
     report (Xuan Gong via bikas)
 
+    YARN-875. Application can hang if AMRMClientAsync callback thread has
+    exception (Xuan Gong via bikas)
+
   BREAKDOWN OF HADOOP-8562/YARN-191 SUBTASKS AND RELATED JIRAS
 
     YARN-158. Yarn creating package-info.java must not depend on sh.
